--- a/index.html
+++ b/index.html
@@ -2,19 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Say yes po ako na to o</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <title>Special Gift</title>
 </head>
 <body>
-    <div class="wrapper">
-        <h2 class="question">Jas, Can we go out sometimes?</h2>
-        <img class="gif" alt="gif" src="https://media0.giphy.com/media/t8Lo2mPAzOcmVTgtGe/giphy.gif?cid=6c09b952231uyrnduhdsf4wqnxz03rv9wx3ni5sm0zolrxz3&ep=v1_stickers_related&rid=giphy.gif&ct=s"/>
-        <div class="btn-group">
-            <button class="yes-btn">Yes</button>
-            <button class="no-btn">No</button>
-        </div>
+    <div class="greetings">
+        
+        <span>U</span>
+        <span>G</span>
+        <span>H</span>
+        <span>,</span>
+        <span>U</span>
+        <span>G</span>
+        <span>H</span>
+        <span>_</span>
+        <span>B</span>
+        <span>I</span>
+        <span>Y</span>
+        <span>A</span>
+        <span>N</span>
+        <span>G</span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
-    <script src="script.js"></script>
+    <div class="description">
+        <span>This is all i can give so please click the button </span>
+    </div>
+    <div class="button">
+        <button>
+            <a href="flower.html">Click ME</a>
+        </button>
+        
+    </div>
 </body>
 </html>
